deployments/service-a/service-a-request-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: service-a-jwt
  namespace: istio-meshlab
spec:
  selector:
    matchLabels:
      app: service-a
  jwtRules:
    - issuer: "http://oidc-mock.local"
      jwksUri: "http://oidc-mock.istio-meshlab.svc.cluster.local/.well-known/jwks.json"
