deployments/service-a/service-a-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-deployment
  namespace: istio-meshlab
  labels:
    app: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a
          image: quarkus-service-a:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
