deployments/service-a/service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: istio-meshlab
  labels:
    app: service-a
spec:
  selector:
    app: service-a
  ports:
    - name: http
      port: 80
      targetPort: 8080
