deployments/service-a/service-a-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: service-a-gateway
  namespace: istio-meshlab
  labels:
    app: service-a
spec:
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "service-a.local"
