deployments/service-a/service-a-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: istio-meshlab
spec:
  selector:
    matchLabels:
      app: service-a
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
